[gd_scene load_steps=10 format=3 uid="uid://djiuoll4ydw1r"]

[ext_resource type="Script" uid="uid://deogwmsiujuk4" path="res://Objects/coral_tree.gd" id="1_b4knm"]
[ext_resource type="Texture2D" uid="uid://bmicnl83wgipw" path="res://Textures/coral.png" id="1_j1y36"]
[ext_resource type="ArrayMesh" uid="uid://sr7pj0xjr3l5" path="res://Models/coral/coral_tree.obj" id="2_2cayi"]
[ext_resource type="ArrayMesh" uid="uid://dew6ixfm8uud5" path="res://Models/coral/broken_coral.obj" id="3_tdyoq"]
[ext_resource type="ArrayMesh" uid="uid://f6m1lp5rbnxb" path="res://Models/coral/coral_stem.obj" id="4_b4knm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tdyoq"]
albedo_texture = ExtResource("1_j1y36")
uv1_scale = Vector3(2, 2, 2)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_r8adn"]
radius = 0.40039063
height = 1.7510986

[sub_resource type="CylinderShape3D" id="CylinderShape3D_mh43r"]
height = 0.4359131
radius = 0.76953125

[sub_resource type="SphereShape3D" id="SphereShape3D_b4knm"]
radius = 1.0

[node name="coral_tree" type="Node3D"]
script = ExtResource("1_b4knm")

[node name="CoralTree" type="MeshInstance3D" parent="."]
visible = false
material_override = SubResource("StandardMaterial3D_tdyoq")
mesh = ExtResource("2_2cayi")

[node name="CoralStem" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.19235504, 0)
material_override = SubResource("StandardMaterial3D_tdyoq")
mesh = ExtResource("4_b4knm")

[node name="physicsBody" type="RigidBody3D" parent="."]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
collision_layer = 4
collision_mask = 7

[node name="BrokenCoral" type="MeshInstance3D" parent="physicsBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75, 0)
material_override = SubResource("StandardMaterial3D_tdyoq")
mesh = ExtResource("3_tdyoq")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="physicsBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.19561768, 0)
shape = SubResource("CapsuleShape3D_r8adn")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="physicsBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.17823112, 0)
shape = SubResource("CylinderShape3D_mh43r")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8518727, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_b4knm")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
